fix: Scroll modal when it overflows (#1651)

--- a/frontend/components/src/Modal/components/Modal/Modal.module.css
+++ b/frontend/components/src/Modal/components/Modal/Modal.module.css
@@ -20,7 +20,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   pointer-events: none;
   outline: none;
 }
